<resources>
  <string name="app_name">NeVA-Meal Recommender</string>
  <string name="welcome_text">Welcome</string>
  <string name="login_app_name">NeVA \n Meal Recommender</string>
  <string name="login_description">To access all features of the NeVa app, You need to login first.</string>
  <string name="signup_description">To complete the process please provide following info.</string>
  <string name="username">Username</string>
  <string name="name">Name</string>
  <string name="password">Password</string>
  <string name="email">Email</string>
  <string name="birthdate">Birthdate</string>
  <string name="gender_male">Male</string>
  <string name="gender_female">Female</string>
  <string name="forgot_pass">Forgot Password?</string>
  <string name="register">Register</string>
  <string name="signup">Sign Up</string>
  <string name="login">Login</string>
  <string name="already_member">Already a member? Login.</string>
  <string name="profile">Profile</string>
  <string name="settings">Settings</string>
  <string name="logout">Logout</string>
  <string name="recommendation">Recommendation</string>
  <string name="proposition">Proposition</string>
  <string name="propose">Propose</string>
  <string name="recommend">Recommend</string>

  <string name="meal_name">Meal Name</string>
  <string name="tag_name">Tag Name</string>
  <string name="meal_time">Time</string>
  <string name="add_meal_history">Add History Entry</string>
  <string name="specific_tag_description">Suggest Tag For Specific Food</string>

  <string name="title_activity_main">MainActivity</string>
  <string name="title_activity_cold_start">Meal Preferences</string>
  <string name="title_fragment_recommend">Recommendation</string>
  <string name="title_fragment_propose">Proposal</string>
  <string name="title_fragment_history">Previous Meals</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="success_signup">Successfully Signed Up!</string>
  <string name="success_add_account">Successfully Added Account</string>
  <string name="success_facebook_login">Facebook Login Successful</string>
  <string name="success_meal_propose">Meal Proposed</string>
  <string name="success_tag_propose">Tag Proposed</string>
  <string name="success_add_history_entry">Added History Entry</string>

  <string name="error_invalid_email">Enter a valid email.</string>
  <string name="error_invalid_password">Enter a valid password</string>
  <string name="error_invalid_name">Enter a valid name</string>
  <string name="error_invalid_gender">Enter a valid gender</string>
  <string name="error_invalid_birthday">Enter a valid birthday</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="error_fix_credentials">Fix your credentials.</string>
  <string name="error_authtoken">Problem with AuthToken</string>
  <string name="error_login">Problem with LoginActivity</string>
  <string name="error_facebook_cancel">Facebook Login cancelled</string>
  <string name="error_facebook_error">Facebook Login error</string>
  <string name="error_fetch_userhistory">Couldn\'t get history from server</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>


