<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top">
        <item android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@mipmap/ic_person_white_24dp"/>
    </group>

    <group
        android:id="@+id/menu_middle">
        <item android:id="@+id/nav_recommendation"
            android:title="@string/recommendation"
            android:icon="@mipmap/ic_settings_white_24dp"/>
        <item android:id="@+id/nav_suggest"
            android:title="@string/suggest"
            android:icon="@mipmap/ic_settings_white_24dp"/>
        <item android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@mipmap/ic_settings_white_24dp"/>
    </group>
    <group
        android:id="@+id/menu_bot">
        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@mipmap/ic_exit_to_app_white_24dp"/>
    </group>


</menu>