<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/nav_menu_top"
      android:checkableBehavior="single">

        <item
            android:id="@+id/nav_recommend"
            android:icon="@mipmap/ic_local_dining_black_24dp"
            android:title="@string/title_fragment_recommend" />
        <item
            android:id="@+id/nav_propose"
            android:icon="@mipmap/ic_mode_edit_black_24dp"
            android:title="@string/title_fragment_propose" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_history_black_24dp"
            android:title="@string/title_fragment_history" />
    </group>

    <group
      android:checkableBehavior="single"
        android:id="@+id/nav_menu_bottom">
            <item android:id="@+id/nav_profile"
              android:icon="@mipmap/ic_person_black_24dp"
                android:title="Profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_exit_to_app_white_24dp"
                android:title="Logout" />
    </group>

</menu>
