<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/signup_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latoregular"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/textPrimaryColor"
                    android:textSize="45sp" />

                <TextView
                    android:id="@+id/SignupDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/latoregular"
                    android:gravity="center"
                    android:text="@string/signup_description"
                    android:textColor="@color/textPrimaryColor"
                    android:textSize="15sp" />

                <android.support.design.widget.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

                  <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="false"
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/textHintColor"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

                  <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/textHintColor"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

                  <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/textPrimaryColor"
                    android:textColorHint="@color/textHintColor"/>
                </android.support.design.widget.TextInputLayout>


              <EditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:focusable="false"
                android:hint="@string/birthdate"
                android:inputType="text"
                android:onClick="onBirthdayButton"
                android:singleLine="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/textPrimaryColor"
                android:textColorHint="@color/textHintColor"
                android:textSize="18sp"/>
              <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <RadioButton
                  android:id="@+id/gender_male"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_gravity="center"
                  android:buttonTint="@color/primaryColor"
                  android:duplicateParentState="false"
                  android:onClick="onGenderButton"
                  android:text="@string/gender_male"
                  android:textColor="@color/textPrimaryColor"
                  android:textSize="18sp"/>

                <RadioButton
                  android:id="@+id/gender_female"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="0"
                  android:layout_gravity="center"
                  android:buttonTint="@color/primaryColor"
                  android:duplicateParentState="false"
                  android:onClick="onGenderButton"
                  android:text="@string/gender_female"
                  android:textColor="@color/textPrimaryColor"
                  android:textSize="18sp"/>

              </RadioGroup>
                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_button"
                    android:onClick="onSignupButton"
                    android:text="@string/signup"
                    android:textColor="@color/textSecondaryColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/already_member"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onMemberButton"
                        android:text="@string/already_member"
                        android:textColor="@color/textPrimaryColor"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible" />
    </FrameLayout>
</android.support.constraint.ConstraintLayout>