<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mealrecommender.neva.com.neva_android_app.LoginActivity"
    android:orientation="vertical"
    android:padding="80dp">

    <EditText
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_box"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/latoregular"
        android:gravity="center"
        android:hint="@string/username"
        android:textColor="@android:color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="101dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_box"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/latoregular"
        android:gravity="center"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="258dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/latoregular"
        android:onClick="onLoginButton"
        android:text="@string/login"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="345dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
