<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mealrecommender.neva.com.neva_android_app.fragments.AddHistoryItemFragment"
    android:theme="@style/AppTheme"
    android:background="@color/backgroundWhite">

    <!-- TODO: Update blank fragment layout -->

    <mealrecommender.neva.com.neva_android_app.customviews.NiceAutoCompleteTextView
        android:id="@+id/eaten_meal_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/time_field"
        android:layout_alignStart="@+id/time_field"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/latoregular"
        android:hint="@string/meal_name"
        android:textAlignment="center"
        android:completionThreshold="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/time_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/latoregular"
        android:hint="@string/meal_time"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusableInTouchMode="false"
        app:layout_constraintTop_toBottomOf="@+id/eaten_meal_field" />

    <Button
        android:id="@+id/sendMealHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/latoregular"
        android:text="@string/add_meal_history"
        android:textColor="@color/textSecondaryColor"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_field" />
    <TextView
      android:id="@+id/helpText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:layout_marginStart="60dp"
      android:layout_marginEnd="60dp"
      android:text="If meal you wanted is not in the list, you can make a request through our Proposition page\n \nThank you for helping us improve"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>


</android.support.constraint.ConstraintLayout>
